--- a/src/users/templates/users/signup.html
+++ b/src/users/templates/users/signup.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
+{% extends 'start.html' %}
+{% block content %}
 {% load static %}
-<html lang="en">
+
     <head>
         <title>Sign Up</title>
         <meta charset="utf-8">
@@ -28,31 +29,37 @@
                             <h3 class="mb-4 text-center"
                                 style="color: black;
                                        font-family: Georgia, Times, serif">Create Your Account</h3>
-                            <form action="#" class="signup-form">
+                            <form method="post" class="signup-form">
+                                {% csrf_token %}
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-12">
                                         <div class="form-group mb-4">
-                                            <input type="text" class="form-control" placeholder="John">
+                                            <input id="username" name="username" type="text" class="form-control" placeholder="Username">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group mb-4">
-                                            <input type="text" class="form-control" placeholder="Doe">
+                                            <input id="first_name" name="first_name" type="text" class="form-control" placeholder="First name">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group mb-4">
+                                            <input id="last_name" name="last_name" type="text" class="form-control" placeholder="Last name">
                                         </div>
                                     </div>
                                     <div class="col-md-12">
                                         <div class="form-group mb-4">
-                                            <input type="text" class="form-control" placeholder="johndoe@gmail.com">
+                                            <input id="email" name="email" type="text" class="form-control" placeholder="E-mail">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group mb-4">
-                                            <input type="password" class="form-control" placeholder="Password">
+                                            <input id="password1" name="password1" type="password" class="form-control" placeholder="Password">
                                         </div>
                                     </div>
                                     <div class="col-md-6">
                                         <div class="form-group mb-4">
-                                            <input type="password" class="form-control" placeholder="Confirm Password">
+                                            <input id="password2" name="password2" type="password" class="form-control" placeholder="Confirm Password">
                                         </div>
                                     </div>
                                     <div class="col-md-12">
@@ -86,4 +93,5 @@
         <script src="{% static 'signup/js/bootstrap.min.js' %}"></script>
         <script src="{% static 'signup/js/main.js' %}"></script>
     </body>
-</html>
+
+{% endblock %}
