--- a/src/users/templates/users/login.html
+++ b/src/users/templates/users/login.html
@@ -1,7 +1,6 @@
 {% extends 'start.html' %}
 {% block content %}
-{% load static %}
-
+    {% load static %}
     <head>
         <title>Login</title>
         <meta charset="utf-8">
@@ -13,74 +12,75 @@
               href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="{% static 'login/css/style.css' %}">
     </head>
-    <section class="ftco-section" style="background-color: #f9f6f7">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-6 text-center mb-5">
-                    <h2 class="heading-section">
-                        <a href="{% url 'start' %}"
-                           style="color: black;
-                                  font-family: Georgia, Times, serif">Habituallife</a>
-                    </h2>
+    <body>
+        <section class="ftco-section" style="background-color: #f9f6f7">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-6 text-center mb-5">
+                        <h1 class="heading-section">
+                            <a href="{% url 'main' %}"
+                               style="color: black;
+                                      font-family: Georgia, Times, serif">H|L</a>
+                        </h1>
+                    </div>
                 </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-md-6 col-lg-4">
-                    <div class="login-wrap p-0">
-                        <h3 class="mb-4 text-center" style="color: black">Have an account?</h3>
-                        <form method="post" class="signin-form">
-                            {% csrf_token %}
-                            <div class="form-group">
-                                <input type="text"
-                                       class="form-control"
-                                       name="username"
-                                       id="username"
-                                       placeholder="Username"
-                                       style="background-color: gainsboro"
-                                       required>
-                            </div>
-                            <div class="form-group">
-                                <input id="password"
-                                       type="password"
-                                       name="password"
-                                       class="form-control"
-                                       placeholder="Password"
-                                       style="background-color: gainsboro"
-                                       required>
-                                <span toggle="#password-field"
-                                      class="fa fa-fw fa-eye field-icon toggle-password"></span>
-                            </div>
-                            <div class="form-group">
-                                <button type="submit"
-                                        class="form-control btn btn-primary submit px-3"
-                                        style="color: white">Sign In</button>
-                            </div>
-                            <div class="form-group d-md-flex">
-                                <div class="w-50">
-                                    <label class="checkbox-wrap checkbox-primary" style="color: black">
-                                        Remember Me
-                                        <input type="checkbox"checked>
-                                        <span class="checkmark"></span>
-                                    </label>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="login-wrap p-0">
+                            <h3 class="mb-4 text-center" style="color: black">Have an account?</h3>
+                            <form method="post" class="signin-form">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <input type="text"
+                                           class="form-control"
+                                           name="username"
+                                           id="username"
+                                           placeholder="Username"
+                                           style="background-color: gainsboro"
+                                           required>
                                 </div>
-                                <div class="w-50 text-md-right">
-                                    <a href="{% url 'password-reset' %}" style="color: black">Forgot Password</a>
+                                <div class="form-group">
+                                    <input id="password"
+                                           type="password"
+                                           name="password"
+                                           class="form-control"
+                                           placeholder="Password"
+                                           style="background-color: gainsboro"
+                                           required>
+                                    <span toggle="#password-field"
+                                          class="fa fa-fw fa-eye field-icon toggle-password"></span>
                                 </div>
-                            </div>
-                        </form>
-                        <p class="w-100 text-center" style="color: black;">&mdash; Or Sign In With &mdash;</p>
-                        <div class="social d-flex text-center">
-                            <a href="#" class="px-2 py-2 mr-md-1 rounded"><span class="ion-logo-facebook mr-2"></span> Facebook</a>
-                            <a href="#" class="px-2 py-2 ml-md-1 rounded"><span class="ion-logo-twitter mr-2"></span> Twitter</a>
+                                <div class="form-group">
+                                    <button type="submit"
+                                            class="form-control btn btn-primary submit px-3"
+                                            style="color: white">Sign In</button>
+                                </div>
+                                <div class="form-group d-md-flex">
+                                    <div class="w-50">
+                                        <label class="checkbox-wrap checkbox-primary" style="color: black">
+                                            Remember Me
+                                            <input type="checkbox"checked>
+                                            <span class="checkmark"></span>
+                                        </label>
+                                    </div>
+                                    <div class="w-50 text-md-right">
+                                        <a href="{% url 'password-reset' %}" style="color: black">Forgot Password</a>
+                                    </div>
+                                </div>
+                            </form>
+                            {#                        <p class="w-100 text-center" style="color: black;">&mdash; Or Sign In With &mdash;</p>#}
+                            {#                        <div class="social d-flex text-center">#}
+                            {#                            <a href="#" class="px-2 py-2 mr-md-1 rounded"><span class="ion-logo-facebook mr-2"></span> Facebook</a>#}
+                            {#                            <a href="#" class="px-2 py-2 ml-md-1 rounded"><span class="ion-logo-twitter mr-2"></span> Twitter</a>#}
+                            {#                        </div>#}
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <script src="{% static 'login/js/jquery.min.js' %}"></script>
-    <script src="{% static 'login/js/popper.js' %}"></script>
-    <script src="{% static 'login/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'login/js/main.js' %}"></script>
-</body>
+        </section>
+        <script src="{% static 'login/js/jquery.min.js' %}"></script>
+        <script src="{% static 'login/js/popper.js' %}"></script>
+        <script src="{% static 'login/js/bootstrap.min.js' %}"></script>
+        <script src="{% static 'login/js/main.js' %}"></script>
+    </body>
 {% endblock %}
