--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
     {% load static %}
     <head>
-        <title>Website menu 09</title>
+        <title>HabitualLife</title>
         <meta charset="utf-8">
         <meta name="viewport"
               content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,10 +13,15 @@
               href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="{% static 'main/css/style.css' %}">
         <link rel="stylesheet" href="{% static 'main/scss/style.scss' %}"
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-
-        <style>
+            <link rel="stylesheet"
+                  href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+            <link rel="stylesheet"
+                  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+            <link rel="icon" href="{% static 'app_logo/HL.png' %}" type="image/x-icon">
+            <link rel="shortcut icon"
+                  href="{% static 'app_logo/HL.png' %}"
+                  type="image/x-icon">
+            <style>
             /*LIST OF CATEGORIES*/
         .category-list {
             max-height: 0;
@@ -63,17 +68,6 @@
           opacity: .75;
         }
 
-        {#        body{#}
-        {#  font-family: monospace;#}
-        {#  font-size: 20px;#}
-        {#  display: flex;#}
-        {#  align-items: center;#}
-        {#  justify-content: center;#}
-        {#  height: 100vh;#}
-        {#  margin:0;#}
-        {#  padding: 0;#}
-        {#  width: 100%;#}
-        {#}#}
         /* Styl dla tła za dialogiem */
         .background::before {
             content: "";
@@ -123,87 +117,102 @@
         }
 
 
-        </style>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-        <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
-
-    </head>
-    <body>
-        <div id="colorlib-page">
-            <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
-            <aside id="colorlib-aside" role="complementary" class="js-fullheight">
-                <nav id="colorlib-main-menu" role="navigation">
-                    <ul>
-                        <li class="colorlib-active">
-                            <a href="#">Home</a>
-                        </li>
-                        <li>
-                            <a href="#" onmouseover="toggleCategories()">Categories</a>
-                            <ul class="category-list">
-                                <li><a href="#">&nbsp - Health</a></li>
-                                <li><a href="#">&nbsp - Finance</a></li>
-                                <li><a href="#">&nbsp - Work/learning</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#">About</a>
-                        </li>
-                        <li>
-                            <a href="#">Services</a>
-                        </li>
-                        <li>
-                            <a href="#">Blog</a>
-                        </li>
-                        <li>
-                            <a href="{% url 'logout' %}">Logout&nbsp<i class='fas fa-power-off'></i></a>
-                        </li>
-                    </ul>
-                </nav>
-            </aside>
-            <!-- END COLORLIB-ASIDE -->
-            <div id="colorlib-main">
-                <section class="ftco-section pt-4 mb-5 ftco-intro">
-                    <div class="container-fluid px-3 px-md-0">
-                        <div class="row">
-                            <div class="col-md-12 mb-4">
-                                <h1 class="h2">Hello, {{ user.username }}</h1>
-                                <br>
-                                <button class="button-31" role="button">Add Category + </button>
-                                <br><br>
-                                <button class="button-31" role="button">Add Habit + </button>
-                                <div class="background">
-                                    <input type="checkbox" id="toggle">
-                                    <label for="toggle">Otwórz dialog</label>
-
-                                    <dialog id="myDialog">
-                                        <h2>Tytuł dialogu</h2>
-                                        <p>Treść dialogu...</p>
-                                        <button id="closeDialog">Zamknij</button>
-                                    </dialog>
+            </style>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+            <script src='https://kit.fontawesome.com/a076d05399.js'
+                    crossorigin='anonymous'></script>
+        </head>
+        <body>
+            <div id="colorlib-page">
+                <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
+                <aside id="colorlib-aside" role="complementary" class="js-fullheight">
+                    <nav id="colorlib-main-menu" role="navigation">
+                        <ul>
+                            <li class="colorlib-active">
+                                <a href="{% url 'main' %}">Home</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'categories' %}" onmouseover="toggleCategories()">Categories</a>
+                                <ul class="category-list">
+                                    {% for category in categories %}
+                                        <li>
+                                            <a href="#">&nbsp - {{ category }}</a>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="{% url 'profile' %}">Profile</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'logout' %}">Logout&nbsp<i class='fas fa-power-off'></i></a>
+                            </li>
+                        </ul>
+                    </nav>
+                </aside>
+                <!-- END COLORLIB-ASIDE -->
+                <div id="colorlib-main">
+                    <section class="ftco-section pt-4 mb-5 ftco-intro">
+                        <div class="container-fluid px-3 px-md-0">
+                            <div class="row">
+                                <div class="col-md-12 mb-4"
+                                     style="position: relative;
+                                            margin-bottom: 25px;
+                                            bottom: 20px">
+                                    <h1 class="h2" style="display: inline-block; margin-right: 10px;">Hello, {{ user.username }}</h1>
+                                    <img src="{{ user.profile.image.url }}"
+                                         style="position: absolute;
+                                                width: 38px;
+                                                height: 38px;
+                                                border-radius: 50%;
+                                                bottom: 47px"
+                                         class="avatar img-circle"
+                                         alt="avatar">
+                                    <a href="{% url 'add-category' %}">
+                                        <button class="button-31" style="position: absolute; left: 65%" role="button">Add Category +</button>
+                                    </a>
+                                    <a href="{% url 'add-habit' %}">
+                                        <button class="button-31" style="position: absolute; left: 82%" role="button">Add Habit +</button>
+                                    </a>
+                                    <hr style="border: 1px solid black; width: 100%;">
+                                </div>
+                                {% if messages %}
+                                    {% for message in messages %}
+                                        <div class="container-fluid p-3">
+                                            <div class="alert {{ message.tags }} alert-dismissible" role="alert">
+                                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                                    <span aria-hidden="true">×</span>
+                                                </button>
+                                                {{ message }}
+                                            </div>
+                                        </div>
+                                    {% endfor %}
+                                {% endif %}
+                                {% block content %}
+                                    <div class="col-md-6">
+                                        <h2 class="h4">Heading Two</h2>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio maxime nisi commodi consequuntur pariatur qui reprehenderit aperiam deserunt, impedit veniam sapiente voluptas minus, ipsum. Ipsum minima sunt provident! Esse, quae.
+                                        </p>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <h2 class="h4">Heading Two</h2>
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio maxime nisi commodi consequuntur pariatur qui reprehenderit aperiam deserunt, impedit veniam sapiente voluptas minus, ipsum. Ipsum minima sunt provident! Esse, quae.
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <h2 class="h4">Heading Two</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio maxime nisi commodi consequuntur pariatur qui reprehenderit aperiam deserunt, impedit veniam sapiente voluptas minus, ipsum. Ipsum minima sunt provident! Esse, quae.
-                                </p>
-                            </div>
-                            <div class="col-md-6">
-                                <h2 class="h4">Heading Two</h2>
-                                <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio maxime nisi commodi consequuntur pariatur qui reprehenderit aperiam deserunt, impedit veniam sapiente voluptas minus, ipsum. Ipsum minima sunt provident! Esse, quae.
-                                </p>
-                            </div>
-                        </div>
+                        </section>
                     </div>
-                </section>
+                    <!-- END COLORLIB-MAIN -->
+                {% endblock %}
             </div>
-            <!-- END COLORLIB-MAIN -->
-        </div>
-        <!-- END COLORLIB-PAGE -->
-    </section>
-
-    <script>
+            <!-- END COLORLIB-PAGE -->
+        </section>
+        <script>
     function toggleCategories() {
     var categoryList = document.querySelector('.category-list');
     categoryList.classList.toggle('visible');
@@ -229,7 +238,6 @@
             categoryList.classList.remove('visible');
         }
     });
-    </script>
-
-</body>
+        </script>
+    </body>
 </html>
