templates(categories): update

--- a/src/habits/templates/habits/categories.html
+++ b/src/habits/templates/habits/categories.html
@@ -18,7 +18,7 @@
                            name="name"
                            id="name"
                            placeholder="Category name"
-                           style="background-color: gainsboro;
+                           style="background-color: whitesmoke;
                                   left: 10px"
                            required>
                 </div>
@@ -47,7 +47,7 @@
                         <button type="submit"
                                 style="border-radius: 10px;
                                        border: None;
-                                       background-color: red;
+                                       background-color: #600201;
                                        color: white">Delete category</button>
                     </form>
                     <button type="button"
