--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -130,6 +130,14 @@
                 <aside id="colorlib-aside" role="complementary" class="js-fullheight">
                     <nav id="colorlib-main-menu" role="navigation">
                         <ul>
+                            <a href="{% url 'main' %}">
+                                <img src="{% static 'app_logo/HL.png' %}"
+                                     style="position: relative;
+                                            width: 100px;
+                                            height: 100px;
+                                            bottom: 30px;
+                                            right: 15px">
+                            </a>
                             <li class="colorlib-active">
                                 <a href="{% url 'main' %}">Home</a>
                             </li>
@@ -153,7 +161,12 @@
                     </nav>
                 </aside>
                 <!-- END COLORLIB-ASIDE -->
-                <div id="colorlib-main">
+                <div id="colorlib-main"
+                     style="position: relative;
+                            background-color: rgb(0, 0, 0);
+                            background-image:url({% static 'main/images/3d-geometric-abstract-background.jpg' %});
+                            background-size: cover;
+                            height: 1000px">
                     <section class="ftco-section pt-4 mb-5 ftco-intro">
                         <div class="container-fluid px-3 px-md-0">
                             <div class="row">
@@ -170,13 +183,75 @@
                                                 bottom: 47px"
                                          class="avatar img-circle"
                                          alt="avatar">
-                                    <a href="{% url 'add-category' %}">
+                                    <a href="{% url 'categories' %}">
                                         <button class="button-31" style="position: absolute; left: 65%" role="button">Add Category +</button>
                                     </a>
-                                    <a href="{% url 'add-habit' %}">
-                                        <button class="button-31" style="position: absolute; left: 82%" role="button">Add Habit +</button>
-                                    </a>
+                                    <button class="button-31"
+                                            type="button"
+                                            data-toggle="modal"
+                                            data-target="#addHabitModal"
+                                            style="position: absolute;
+                                                   left: 82%">Add Habit +</button>
                                     <hr style="border: 1px solid black; width: 100%;">
+                                </div>
+                                <!-- ADD HABIT MODAL -->
+                                <div class="modal fade"
+                                     id="addHabitModal"
+                                     tabindex="-1"
+                                     role="dialog"
+                                     aria-labelledby="addHabitModal"
+                                     aria-hidden="true">
+                                    <div class="modal-dialog"
+                                         role="document"
+                                         style="position: fixed;
+                                                width: 80%;
+                                                max-width: 800px;
+                                                top: 50%;
+                                                left: 50%;
+                                                transform: translate(-50%, -50%)">
+                                        <div class="modal-content">
+                                            <!-- MODAL CONTENT -->
+                                            <div class="modal-body">
+                                                <!-- FORM -->
+                                                <form method="post"
+                                                      action="{% url 'add-habit' %}"
+                                                      style="position: relative;
+                                                             left: 60px">
+                                                    {% csrf_token %}
+                                                    <h2>Add habit</h2>
+                                                    <hr style="position: relative; right: 40px; width: 90%;">
+                                                    <div>
+                                                        <div>
+                                                            <label style="background-color: black; width: 120px; margin-right: 30px;">Name:</label>
+                                                            {{ form.name }}
+                                                        </div>
+                                                        <div>
+                                                            <label for="category"
+                                                                   style="background-color: black;
+                                                                          width: 120px;
+                                                                          margin-right: 30px">Category:</label>
+                                                            {{ form.category }}
+                                                        </div>
+                                                        <div>
+                                                            <label style="background-color: black; width: 120px; margin-right: 30px;">Frequency:</label>
+                                                            {{ form.frequency }}
+                                                        </div>
+                                                        <div>
+                                                            <label style="background-color: black; width: 120px; margin-right: 30px;">Is positive:</label>
+                                                            {{ form.is_positive }}
+                                                        </div>
+                                                        <hr style="position: relative; right: 40px; width: 90%;">
+                                                        <div>
+                                                            <button type="submit"
+                                                                    style="position: relative;
+                                                                           border-radius: 10px;
+                                                                           left: 10px">Add habit</button>
+                                                        </div>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                                 {% if messages %}
                                     {% for message in messages %}
