--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -195,64 +195,8 @@
                                     <hr style="border: 1px solid black; width: 100%;">
                                 </div>
                                 <!-- ADD HABIT MODAL -->
-                                <div class="modal fade"
-                                     id="addHabitModal"
-                                     tabindex="-1"
-                                     role="dialog"
-                                     aria-labelledby="addHabitModal"
-                                     aria-hidden="true">
-                                    <div class="modal-dialog"
-                                         role="document"
-                                         style="position: fixed;
-                                                width: 80%;
-                                                max-width: 800px;
-                                                top: 50%;
-                                                left: 50%;
-                                                transform: translate(-50%, -50%)">
-                                        <div class="modal-content">
-                                            <!-- MODAL CONTENT -->
-                                            <div class="modal-body">
-                                                <!-- FORM -->
-                                                <form method="post"
-                                                      action="{% url 'add-habit' %}"
-                                                      style="position: relative;
-                                                             left: 60px">
-                                                    {% csrf_token %}
-                                                    <h2>Add habit</h2>
-                                                    <hr style="position: relative; right: 40px; width: 90%;">
-                                                    <div>
-                                                        <div>
-                                                            <label style="background-color: black; width: 120px; margin-right: 30px;">Name:</label>
-                                                            {{ form.name }}
-                                                        </div>
-                                                        <div>
-                                                            <label for="category"
-                                                                   style="background-color: black;
-                                                                          width: 120px;
-                                                                          margin-right: 30px">Category:</label>
-                                                            {{ form.category }}
-                                                        </div>
-                                                        <div>
-                                                            <label style="background-color: black; width: 120px; margin-right: 30px;">Frequency:</label>
-                                                            {{ form.frequency }}
-                                                        </div>
-                                                        <div>
-                                                            <label style="background-color: black; width: 120px; margin-right: 30px;">Is positive:</label>
-                                                            {{ form.is_positive }}
-                                                        </div>
-                                                        <hr style="position: relative; right: 40px; width: 90%;">
-                                                        <div>
-                                                            <button type="submit"
-                                                                    style="position: relative;
-                                                                           border-radius: 10px;
-                                                                           left: 10px">Add habit</button>
-                                                        </div>
-                                                    </div>
-                                                </form>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                {% include 'habits/add_habit_modal.html' %}
+                                <!-- -->
                                 {% if messages %}
                                     {% for message in messages %}
                                         <div class="container-fluid p-3">
@@ -266,18 +210,17 @@
                                     {% endfor %}
                                 {% endif %}
                                 {% block content %}
+                                    <!-- HABITS LIST -->
                                     <div class="col-md-6">
-                                        <h2 class="h4">Heading Two</h2>
-                                        <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio maxime nisi commodi consequuntur pariatur qui reprehenderit aperiam deserunt, impedit veniam sapiente voluptas minus, ipsum. Ipsum minima sunt provident! Esse, quae.
-                                        </p>
+                                        <div style="position: relative;
+                                                    right: 150px;
+                                                    bottom: 70px;
+                                                    border-radius: 10px;
+                                                    width: 1000px;
+                                                    height: 1000px">{% include 'habits/habits_list.html' %}</div>
                                     </div>
-                                    <div class="col-md-6">
-                                        <h2 class="h4">Heading Two</h2>
-                                        <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio maxime nisi commodi consequuntur pariatur qui reprehenderit aperiam deserunt, impedit veniam sapiente voluptas minus, ipsum. Ipsum minima sunt provident! Esse, quae.
-                                        </p>
-                                    </div>
+                                    <!-- -->
+                                    <div class="col-md-6"></div>
                                 </div>
                             </div>
                         </section>
